--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body bgcolor="white" text="black" link="green">
     <table cellspacing = "20">
         <tr>
-            <td><img src="" height="150" width="200" alt="aayush image "></td>
+            <td><img src="images/WIN_20210111_18_11_07_Pro-modified" height="150" width="200" alt="aayush image "></td>
             <td>
                 <h1>Aayush</h1>
                 <!-- <a href="mailto: aayushbhat201@gmail.com">gmail</a> -->
