--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
         </tr>
         <tr>
             <td>2023-25</td>
-            <td>Student at NIT trichy</td>
+<!--             <td>Student at NIT trichy</td> -->
         </tr>
 
         <tr>
             <td>2025-26</td>
-            <td>Highest paid intern</td>
+<!--             <td>Highest paid intern</td> -->
         </tr>
     </table>
     <hr color = "grey">
