--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body bgcolor="white" text="black" link="green">
     <table cellspacing = "20">
         <tr>
-            <td><img src="images/WIN_20210111_18_11_07_Pro-modified" height="150" width="200" alt="aayush image "></td>
+            <td><img src="images/WIN_20210111_18_11_07_Pro-modified.png" height="150" width="200" alt="aayush image "></td>
             <td>
                 <h1>Aayush</h1>
                 <!-- <a href="mailto: aayushbhat201@gmail.com">gmail</a> -->
@@ -43,9 +43,6 @@
 
 
     <h3>Work Expeirence</h3>
-    <!-- <p>2020-23 Student at GGISPU</p> -->
-    <!-- <p>2023-25 Student at NIT trichy</p> -->
-    <!-- <p>2025-26 Highest paid intern</p> -->
 
     <table>
         <thead>
@@ -64,12 +61,10 @@
         </tr>
         <tr>
             <td>2023-25</td>
-<!--             <td>Student at NIT trichy</td> -->
         </tr>
 
         <tr>
             <td>2025-26</td>
-<!--             <td>Highest paid intern</td> -->
         </tr>
     </table>
     <hr color = "grey">
